[tool.poetry]
name = "q-learning"
version = "0.1.0"
description = ""
authors = ["j-friis <xdr476@alumni.ku.dk>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
numpy = "1.23.1"
matplotlib = "^3.9.0"
torch = "1.12.1"
gym = "0.26.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
